--- a/package.json
+++ b/package.json
@@ -10,32 +10,32 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.1.3",
-    "@mui/material": "^6.1.3",
-    "@mui/x-data-grid": "^7.20.0",
-    "@mui/x-date-pickers": "^7.20.0",
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.0",
+    "@mui/icons-material": "7.1.0",
+    "@mui/material": "7.1.0",
+    "@mui/x-data-grid": "8.2.0",
+    "@mui/x-date-pickers": "8.2.0",
     "dayjs": "^1.11.13",
-    "notistack": "^3.0.1",
-    "prettier": "^3.3.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0",
-    "zustand": "^5.0.0"
+    "notistack": "3.0.2",
+    "prettier": "3.5.3",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-router-dom": "7.5.3",
+    "zustand": "5.0.4"
   },
   "devDependencies": {
-    "@eslint/js": "^9.11.1",
-    "@types/react": "^18.3.10",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^9.11.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.12",
-    "globals": "^15.9.0",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.8"
+    "@eslint/js": "9.26.0",
+    "@types/react": "19.1.3",
+    "@types/react-dom": "19.1.3",
+    "@vitejs/plugin-react-swc": "3.9.0",
+    "eslint": "9.26.0",
+    "eslint-plugin-react-hooks": "5.2.0",
+    "eslint-plugin-react-refresh": "0.4.20",
+    "globals": "16.1.0",
+    "typescript": "5.8.3",
+    "typescript-eslint": "8.32.0",
+    "vite": "6.3.5"
   },
   "prettier": {
     "printWidth": 80,
